--- a/source/bloc/Makefile
+++ b/source/bloc/Makefile
@@ -1,11 +1,5 @@
 PROGRAM = main
 
-# One of "ram" or "flash"
-MODE = flash
-
-# One of "hd" or "md" or "cl"
-DENSITY = hd
-
 # Source files
 SRCS = $(filter %.c,$(shell git ls-files))
 
@@ -14,11 +8,9 @@ OBJS = $(notdir $(SRCS:.c=.o)) tasks.o queue.o port.o list.o heap_3.o croutine.o
 
 include ../Makefile.inc
 
-CFLAGS += -DMBLED -DDEBUG -include debug.h
-
-DIRS = fakehardware olsr utils watchdog comm
-
+DIRS = olsr utils watchdog comm AsyncIO
+CFLAGS += -D_GNU_SOURCE -DDEBUG -include debug.h
 CFLAGS += $(addprefix -I,$(DIRS))
-VPATH += $(DIRS) $(FREERTOS_DIR)
+VPATH += $(DIRS)
 
 LDFLAGS += -lpthread
