olsr: pretty print sets to make debug easier.

--- a/source/bloc/Makefile
+++ b/source/bloc/Makefile
@@ -14,3 +14,7 @@ CFLAGS += $(addprefix -I,$(DIRS))
 VPATH += $(DIRS)
 
 LDFLAGS += -lpthread
+
+debug.h: dashes.h
+dashes.h: dashes.py
+	./$< 20 > $@
