--- a/source/bloc/Makefile
+++ b/source/bloc/Makefile
@@ -20,5 +20,10 @@ debug.h: dashes.h
 dashes.h: dashes.py
 	./$< 20 > $@
 
+olsr/olsr_packet.h: mtu.h
+mtu.h: mtu.py
+	./$< $$(../scripts/mtu) > $@.tmp
+	mv $@.tmp $@
+
 charmap/charmap.c::
 	$(MAKE) -C charmap
